[package]
name = "cyclotrace"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yua134/cyclotrace"
readme = "README.md"
authors = ["yua"]
exclude = ["/.history/**", "/.github/**", "notice.hbs"]
keywords = ["wait-free", "lock-free", "ring-buffer", "spmc"]
categories = ["concurrency", "data-structures", "no-std::no-alloc", "multimedia::audio", "science::robotics"]
description = "A high-performance, wait-free ring buffer in Rust. Supports SPMC with peek-based semantics instead of destructive consumption."

[features]
default = ["alloc"]
alloc = []
loom = ["dep:loom"]
arrayvec = ["dep:arrayvec"]
heapless = ["dep:heapless"]

[dependencies]
cfg-if = "1.0.4"
crossbeam-utils = { version = "0.8.21" , default-features = false}
loom = { version = "0.7.2" , optional = true }

heapless = { version = "0.9.1", optional = true }
arrayvec = { version = "0.7.6", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.8.2"
crossbeam-channel = "0.5.15"

[[bench]]
name = "single"
harness = false

[[bench]]
name = "compare"
harness = false

[profile]
release.opt-level = 3
release.panic = "abort"
release.strip = true
